--- a/src/getactive-app.html
+++ b/src/getactive-app.html
@@ -591,15 +591,15 @@
             <p class="bold otherlinkstxt yellow small">Other Swarm City links</p>
             <div class="minispace"></div>
 
-<!--             <a target="_blank" href="http://thisis.swarm.city">What is Swarm City?</a> -->
+<!--             <a href="https://thisis.swarm.city">What is Swarm City?</a> -->
 
 
-            <!-- <a target="_blank" href="http://getactivein.swarm.city">Get active in Swarm City</a> -->
-            <!-- <a target="_blank" href="http://swt.swarm.city">About the Swarm City Token</a> -->
-            <a target="_blank" href="http://advisors.swarm.city">Swarm City Advisors</a>
-            <!-- <a target="_blank" href="http://dev.swarm.city">Development</a>
-            <a target="_blank" href="http://releaseroadmap.swarm.city">Release Roadmap</a> -->
-            <a target="_blank" href="http://faq.swarm.city">FAQ</a>
+            <!-- <a href="https://getactivein.swarm.city">Get active in Swarm City</a> -->
+            <!-- <a href="https://swt.swarm.city">About the Swarm City Token</a> -->
+            <a href="https://advisors.swarm.city">Swarm City Advisors</a>
+            <!-- <a href="https://dev.swarm.city">Development</a>
+            <a href="https://releaseroadmap.swarm.city">Release Roadmap</a> -->
+            <a href="https://faq.swarm.city">FAQ</a>
           </div>
           <div class="linkblok_two">
             <p class="bold grey3 small">Find Swarm City on</p>
