--- a/src/getactive-app.html
+++ b/src/getactive-app.html
@@ -395,7 +395,7 @@
 
           <p class="grey2 forwho">For designers</p>
           <div class="minispace"></div>
-          <h2 class="ultralight hivetittle maxwidth centertxt"><span class="blue">The Visual Hive</span> visualizes the brand sexpression of Swarm City.</h2>
+          <h2 class="ultralight hivetittle maxwidth centertxt"><span class="blue">The Visual Hive</span> visualizes the brand expression of Swarm City.</h2>
           <div class="fivespace"></div>
 
           <div class="totalwidth horizont centercenter">
