Changed according to remarks Kris / Matt

--- a/src/getactive-app.html
+++ b/src/getactive-app.html
@@ -11,10 +11,10 @@
 <link rel="import" href="../bower_components/sc-iconset/sc-iconset.html">
 
 <dom-module id="getactive-app">
-<link rel="import" href="../bower_components/sc-style/sc-style.css" type="css">
-
+<!-- <link rel="import" href="../bower_components/sc-style/sc-style.css" type="css">
+ -->
   <template>
-    <style>
+    <style include="sc-styles">
       :host {
         display: block;
       }
@@ -321,17 +321,17 @@
           <h2 class="ultralight hivetittle maxwidth centertxt"><span class="blue">The Dev Hive</span> creates the app and underlying technology.</h2>
           <div class="fivespace"></div>
 
-          <div class="totalwidth horizont centercenter">
+          <div class="totalwidth vertic centercenter">
 
               <div class="memberpic">
                 <img src="/images/stefaan.png">
               </div>
-
-            <div class="vertic start centerjust">
+              <div class="whitespace"></div>
+            <div class="vertic centercenter">
               <p class="centertxt small">Lead by <span class="semibold">Stefaan Ponnet</span></p>
               <div class="minispace"></div>
               <div class="findlink">
-              <a class="totalwidth horizont center startjust bold" href="https://swarm-slack-invite.herokuapp.com/">Find @sponnet on slack</a>
+              <a class="totalwidth centertxt horizont centercenter bold" href="https://swarm-slack-invite.herokuapp.com/">Find @sponnet on slack</a>
             </div>
             </div>
 
@@ -347,17 +347,17 @@
           <h2 class="ultralight hivetittle maxwidth centertxt"><span class="blue">The Bus Hive</span> manages business processes, finance, legal and organisation.</h2>
           <div class="fivespace"></div>
 
-          <div class="totalwidth horizont centercenter">
+          <div class="totalwidth vertic centercenter">
 
               <div class="memberpic">
                 <img src="/images/bernd.jpg">
               </div>
-
-            <div class="vertic start centerjust">
+              <div class="whitespace"></div>
+            <div class="vertic centercenter">
               <p class="centertxt small">Lead by <span class="semibold">Bernd Lapp</span></p>
               <div class="minispace"></div>
               <div class="findlink">
-              <a class="totalwidth horizont center startjust bold" href="https://swarm-slack-invite.herokuapp.com/">Find @bernd on slack</a>
+              <a class="totalwidth centertxt horizont centercenter bold" href="https://swarm-slack-invite.herokuapp.com/">Find @bernd on slack</a>
             </div>
             </div>
 
@@ -370,20 +370,26 @@
 
           <p class="grey2 forwho">For communicators</p>
           <div class="minispace"></div>
-          <h2 class="ultralight hivetittle maxwidth centertxt"><span class="blue">The Outreach Hive</span> expresses the ideas and concept of Swarm City.</h2>
+          <h2 class="ultralight hivetittle maxwidth centertxt"><span class="blue">The Comm Hive</span> helps the swarm express the ideas and concept of Swarm City.</h2>
           <div class="fivespace"></div>
 
-          <div class="totalwidth horizont centercenter">
+          <div class="totalwidth vertic centercenter">
 
+            <div class="totalwidth horizont centercenter">
               <div class="memberpic">
-                <img src="/images/michael-glass.png">
+                <img src="/images/matt.jpg">
               </div>
+              <div class="memberpic">
+                <img src="/images/kris.jpg">
+              </div>
+            </div>
 
-            <div class="vertic start centerjust">
-              <p class="centertxt small">Lead by <span class="semibold">King Flurkel</span></p>
+              <div class="whitespace"></div>
+            <div class="vertic centercenter">
+              <p class="centertxt small">Lead by <span class="semibold"> Matthew Carano and Kris Decoodt</span></p>
               <div class="minispace"></div>
               <div class="findlink">
-              <a class="totalwidth horizont center startjust bold" href="https://swarm-slack-invite.herokuapp.com/">Find @kingflurkel on slack</a>
+              <a class="totalwidth centertxt horizont centercenter bold" href="https://swarm-slack-invite.herokuapp.com/">Find matthewcarano or krrisis on slack</a>
             </div>
             </div>
 
@@ -393,22 +399,28 @@
 
       <div class="totalwidth vertic centercenter part lighter">
 
-          <p class="grey2 forwho">For designers</p>
+          <p class="grey2 forwho">For designers and dreamers</p>
           <div class="minispace"></div>
-          <h2 class="ultralight hivetittle maxwidth centertxt"><span class="blue">The Visual Hive</span> visualizes the brand expression of Swarm City.</h2>
+          <h2 class="ultralight hivetittle maxwidth centertxt"><span class="blue">The Concept Hive</span> takes the abstract of Swarm City and makes it visual.</h2>
           <div class="fivespace"></div>
 
-          <div class="totalwidth horizont centercenter">
+          <div class="totalwidth vertic centercenter">
 
+            <div class="totalwidth horizont centercenter">
               <div class="memberpic">
                 <img src="/images/faffy_diggins.png">
               </div>
+              <div class="memberpic">
+                <img src="/images/michael-glass.png">
+              </div>
+            </div>
 
-            <div class="vertic start centerjust">
-              <p class="centertxt small">Lead by <span class="semibold">Faffy Diggins</span></p>
+              <div class="whitespace"></div>
+            <div class="vertic centercenter">
+              <p class="centertxt small">Lead by <span class="semibold">Faffy Diggins and King Flurkel</span></p>
               <div class="minispace"></div>
               <div class="findlink">
-              <a class="totalwidth horizont center startjust bold" href="https://swarm-slack-invite.herokuapp.com/">Find @faffy_dee on slack</a>
+              <a class="totalwidth centertxt horizont centercenter bold" href="https://swarm-slack-invite.herokuapp.com/">Find @faffy_dee or @kingflurkel on slack</a>
             </div>
             </div>
 
@@ -441,11 +453,11 @@
           <div class="minispace"></div>
           <h1 class="membername ultralight ">Bernd Lapp</h1>
           <div class="whitespace"></div>
-          <div class="vertic centercenter contactmember">
+      centercentervertic centercenter contactmember">
             <div class="dotline"></div>
             <div class="minispace"></div>
             <div class="minispace"></div>
-              <a class="totalwidth horizont center startjust" href="https://swarm-slack-invite.herokuapp.com/">
+              <a class="totalwidth horizcentertxt ont center starcenterf="https://swarm-slack-invite.herokuapp.com/">
                 <div class="contactlogo">
                   <img src="/images/Slack_Mark_Web.png">
                 </div>
@@ -476,11 +488,11 @@
           <div class="minispace"></div>
           <h1 class="membername ultralight ">King Flurkel</h1>
           <div class="whitespace"></div>
-          <div class="vertic centercenter contactmember">
+      centercentervertic centercenter contactmember">
             <div class="dotline"></div>
             <div class="minispace"></div>
             <div class="minispace"></div>
-              <a class="totalwidth horizont center startjust" href="https://swarm-slack-invite.herokuapp.com/">
+              <a class="totalwidth horizcentertxt ont center starcenterf="https://swarm-slack-invite.herokuapp.com/">
                 <div class="contactlogo">
                   <img src="/images/Slack_Mark_Web.png">
                 </div>
@@ -511,11 +523,11 @@
           <div class="minispace"></div>
           <h1 class="membername ultralight ">Stefaan Ponnet</h1>
           <div class="whitespace"></div>
-          <div class="vertic centercenter contactmember">
+      centercentervertic centercenter contactmember">
             <div class="dotline"></div>
             <div class="minispace"></div>
             <div class="minispace"></div>
-              <a class="totalwidth horizont center startjust" href="https://swarm-slack-invite.herokuapp.com/">
+              <a class="totalwidth horizcentertxt ont center starcenterf="https://swarm-slack-invite.herokuapp.com/">
                 <div class="contactlogo">
                   <img src="/images/Slack_Mark_Web.png">
                 </div>
@@ -547,11 +559,11 @@
           <div class="minispace"></div>
           <h1 class="membername ultralight centertxt">Christopher Winston</h1>
           <div class="whitespace"></div>
-          <div class="vertic centercenter contactmember">
+      centercentervertic centercenter contactmember">
             <div class="dotline"></div>
             <div class="minispace"></div>
             <div class="minispace"></div>
-              <a class="totalwidth horizont center startjust" href="https://swarm-slack-invite.herokuapp.com/">
+              <a class="totalwidth horizcentertxt ont center starcenterf="https://swarm-slack-invite.herokuapp.com/">
                 <div class="contactlogo">
                   <img src="/images/Slack_Mark_Web.png">
                 </div>
@@ -599,12 +611,12 @@
             <a href="https://advisors.swarm.city">Swarm City Advisors</a>
             <!-- <a href="https://dev.swarm.city">Development</a>
             <a href="https://releaseroadmap.swarm.city">Release Roadmap</a> -->
-            <a href="https://faq.swarm.city">FAQ</a>
+            <a href="https://faq.centercenter/a>
           </div>
           <div class="linkblok_two">
             <p class="bold grey3 small">Find Swarm City on</p>
             <div class="minispace"></div>
-            <a href="https://swarm-slack-invite.herokuapp.com/" target="_blank">Slack</a>
+            <a href=centertxt "https://swarm-centerte.herokuapp.com/" target="_blank">Slack</a>
             <a href="https://medium.com/swarm-city-times" target="_blank">Medium</a>
             <a href="https://github.com/swarmcity" target="_blank">Github</a>
             <a href="https://twitter.com/SwarmCityHive" target="_blank">Twitter</a>
