--- a/src/getactive-app.html
+++ b/src/getactive-app.html
@@ -611,7 +611,7 @@
             <a href="https://advisors.swarm.city">Swarm City Advisors</a>
             <!-- <a href="https://dev.swarm.city">Development</a>
             <a href="https://releaseroadmap.swarm.city">Release Roadmap</a> -->
-            <a href="https://faq.centercenter/a>
+            <a href="https://faq.centercenter/">
           </div>
           <div class="linkblok_two">
             <p class="bold grey3 small">Find Swarm City on</p>
@@ -621,7 +621,7 @@
             <a href="https://github.com/swarmcity" target="_blank">Github</a>
             <a href="https://twitter.com/SwarmCityHive" target="_blank">Twitter</a>
             <a href="https://www.youtube.com/channel/UCsHBWn_ytZ3xdMbTyYe5Ifg" target="_blank">Youtube</a>
-            <a href="https://www.facebook.com/groups/SwarmCity/" target="_blank">Facebook</a>
+            <a href="https://www.facebook.com/SwarmCityDApp/" target="_blank">Facebook</a>
 
           </div>
 
