--- a/src/getactive-app.html
+++ b/src/getactive-app.html
@@ -406,10 +406,10 @@
           <div class="linkblok_two">
             <p class="bold grey3 small">Find Swarm City on</p>
             <div class="minispace"></div>
-            <a href=centertxt "https://swarm-centerte.herokuapp.com/" target="_blank">Slack</a>
+            <a href="http://slackinvite.swarm.city/" target="_blank">Slack</a>
             <a href="https://medium.com/swarm-city-times" target="_blank">Medium</a>
             <a href="https://github.com/swarmcity" target="_blank">Github</a>
-            <a href="https://twitter.com/SwarmCityHive" target="_blank">Twitter</a>
+            <a href="https://twitter.com/SwarmCityDApp" target="_blank">Twitter</a>
             <a href="https://www.youtube.com/channel/UCsHBWn_ytZ3xdMbTyYe5Ifg" target="_blank">Youtube</a>
             <a href="https://www.facebook.com/SwarmCityDApp/" target="_blank">Facebook</a>
 
@@ -475,6 +475,16 @@
                                 find: '@jennwilliams',
                                 members: [
                                   {membername: 'jenn', memberpic: '/images/jenn.png'}],
+                                memberstxt: 'lorem ipsum'
+                            },
+                    ]
+        }
+      },
+
+    });
+  </script>
+</dom-module>
+ages/jenn.png'}],
                                 memberstxt: 'lorem ipsum'
                             },
                     ]
